--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,15 +7,18 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
-composeBom = "2025.04.00"
+composeBom = "2025.04.01"
 gmsVersion = "4.4.2"
-firebaseVersion = "33.12.0"
+firebaseVersion = "33.13.0"
 firebaseAuthKtx = "23.2.0"
 navigationCompose = "2.8.9"
 navigationRuntimeKtx = "2.8.9"
 serializationVersion = "2.0.0"
 serializationKotlin = "1.7.1"
 coilCompose = "2.5.0"
+hiltCompiler = "2.52"
+hiltAndroid = "2.53.1"
+google-ksp = "2.1.0-1.0.29"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -41,6 +44,8 @@ androidx-navigation-compose = { group = "androidx.navigation", name = "navigatio
 androidx-navigation-runtime-ktx = { group = "androidx.navigation", name = "navigation-runtime-ktx", version.ref = "navigationRuntimeKtx" }
 serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref="serializationKotlin" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
+hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltCompiler" }
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -48,3 +53,5 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 gms = { id = "com.google.gms.google-services", version.ref = "gmsVersion" }
 plugin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "serializationVersion" }
+hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hiltAndroid" }
+google-ksp = { id = "com.google.devtools.ksp", version.ref = "google-ksp" }
